--- a/da-footer.html
+++ b/da-footer.html
@@ -1,20 +1,26 @@
-<body><main><div><p><a href="/">Fashion Blog</a></p><p><a href="#">Facebook</a> | <a href="#">Instagram</a> | <a href="#">X</a> | <a href="#">LinkedIn</a> | <a href="#">YouTube</a></p></div>
-<div><h3 id="trends">Trends</h3><ul>
-<li><a href="#">Style</a></li>
-<li><a href="#">Looks</a></li>
-<li><a href="#">Events</a></li>
-<li><a href="#">Brands</a></li>
-<li><a href="#">Tips</a></li>
-</ul><h3 id="inspire">Inspire</h3><ul>
-<li><a href="#">Stories</a></li>
-<li><a href="#">People</a></li>
-<li><a href="#">Culture</a></li>
-<li><a href="#">Vibes</a></li>
-<li><a href="#">Fun</a></li>
-</ul><h3 id="explore">Explore</h3><ul>
-<li><a href="#">Travel</a></li>
-<li><a href="#">Beach</a></li>
-<li><a href="#">Night</a></li>
-<li><a href="#">Sport</a></li>
-<li><a href="#">Chill</a></li>
+<body><main><div><p><a href="/">Fashion Blog</a></p>
+<p><a href="/">Facebook</a> | <a href="/">Instagram</a> | <a href="/">X</a> | <a href="/">LinkedIn</a> | <a href="/">YouTube</a></p></div>
+<div><h3>Trends</h3>
+<ul>
+<li><a href="/">Style</a></li>
+<li><a href="/">Looks</a></li>
+<li><a href="/">Events</a></li>
+<li><a href="/">Brands</a></li>
+<li><a href="/">Tips</a></li>
+</ul>
+<h3>Inspire</h3>
+<ul>
+<li><a href="/">Stories</a></li>
+<li><a href="/">People</a></li>
+<li><a href="/">Culture</a></li>
+<li><a href="/">Vibes</a></li>
+<li><a href="/">Fun</a></li>
+</ul>
+<h3>Explore</h3>
+<ul>
+<li><a href="/">Travel</a></li>
+<li><a href="/">Beach</a></li>
+<li><a href="/">Night</a></li>
+<li><a href="/">Sport</a></li>
+<li><a href="/">Chill</a></li>
 </ul></div></main></body>
